Bug 148117 - FILESAVE: PPTX: date in chart changes in MSO
Summary: FILESAVE: PPTX: date in chart changes in MSO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha1+
Hardware: All All
: high major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:26.2.0 target:25.8.0.2 target:...
Keywords: bibisected, bisected, filter:pptx, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2022-03-21 16:15 UTC by Xisco Faulí
Modified: 2025-07-15 17:03 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (47.08 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-03-21 16:15 UTC, Xisco Faulí
Details
Comparison LibreOffice 7.4 master and MSO 2016 after RT (57.57 KB, image/png)
2022-03-21 16:17 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-03-21 16:15:23 UTC
Created attachment 179012 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Save it to PPTX
3. Open it in LibreOffice
4. Open it in Powerpoint ( I'm using MSO 2016 )

-> The labels in the chart are different. See screenshot

Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: cfd82e7a2cc2b45b738eb0efa0827196d2de61a4
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-03-21 16:17:25 UTC
Created attachment 179013 [details]
Comparison LibreOffice 7.4 master and  MSO 2016 after RT
Comment 2 Xisco Faulí 2022-03-21 16:18:39 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=f547cf17a179ebd7de5c2b4dd2d00d0027a25429

author	Dennis Francis <dennisfrancis.in@gmail.com>	2021-09-02 14:33:55 +0530
committer	Miklos Vajna <vmiklos@collabora.com>	2021-09-06 08:47:50 +0200
commit f547cf17a179ebd7de5c2b4dd2d00d0027a25429 (patch)
tree 764038da5e3280c93099d2ca3ef2731484ece324
parent ba1e42f05e785c30d03553acd5647eebd7cdede6 (diff)
[API CHANGE] oox: fix import of chart date categories

Bisected with: bibisect-linux64-7.3

Adding Cc: to Dennis Francis
Comment 3 Rajasekaran Karunanithi 2022-12-26 23:19:40 UTC
Reproducable in LO 7.6 alpha Dev under Windows 10(x64). I tested the PPTX using https://onlinedocumentviewer.com/, the results are same as described in this bug report.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ad387d5b984c6666906505d25685065f710ed55d
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-IN (en_IN); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2025-07-15 06:53:14 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/00c259068e75991cc2dacd42e3a5c84837c526e5

tdf#148117: always export date chart axis with 1900 null date

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-07-15 09:49:42 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/37bee016829f47537555f424c955a1461f8563a1

tdf#148117: always export date chart axis with 1900 null date

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-07-15 11:06:53 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/91ef28affff4523fc304ea1db03b96f02868334b

tdf#148117: always export date chart axis with 1900 null date

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Markus Mohrhard 2025-07-15 17:03:10 UTC
The backported fix will get rid of the regression and handle the default LibreOffice exported charts properly in MSO. A follow-up fix in master added support for the 1904 reference date handling which should resolve issues with MSO files generated on Mac.