tdf#148117: always export date chart axis with 1900 null date

We currently don't support the import of the 1904 setting correctly and
internally always use the 1900 reference. We should fix the import as
well and then use the correct export.

Change-Id: Idd69cf086d1dee14b92cebeeb1c51ece158a2955
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187834
Tested-by: Jenkins
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187897