oox/source/export/chartexport.cxx
@@ -1258,6 +1258,15 @@ void ChartExport::exportChartSpace( const Reference< css::chart::XChartDocument 
                 FSNS( XML_xmlns, XML_r ), pFB->getNamespaceURL(OOX_NS(officeRel)));
     }
 
+    if( !bIncludeTable )
+    {
+        // TODO:external data
+    }
+    else
+    {
+        pFS->singleElement(FSNS(XML_c, XML_date1904), XML_val, "0");
+    }
+
     // TODO: get the correct editing language
     if (bIsChartex) {
         // chartData
@@ -1273,10 +1282,6 @@ void ChartExport::exportChartSpace( const Reference< css::chart::XChartDocument 
         pFS->singleElement(FSNS(XML_c, XML_roundedCorners), XML_val, "0");
     }
 
-    if( !bIncludeTable )
-    {
-        // TODO:external data
-    }
     //XML_chart
     exportChart(xChartDoc, bIsChartex);
 
